--- a/.github/workflows/sal-deployment.yml
+++ b/.github/workflows/sal-deployment.yml
@@ -10,46 +10,76 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
+      # 1️⃣ Checkout
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Get changed SQL files in this PR
+      # 2️⃣ Install jq
+      - name: Install jq
+        run: sudo apt-get install -y jq
+
+      # 3️⃣ Get changed SQL files via GitHub API (CORRECT WAY)
       - name: Get changed SQL files
-        id: get_sql_files
+        id: sql_files
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          files=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'sal/deployment/.*\.sql' || true)
-          echo "Changed SQL files: $files"
-          echo "::set-output name=sql_files::$files"
+          files=$(curl -s \
+            -H "Authorization: Bearer $GH_TOKEN" \
+            https://api.github.com/repos/${{ github.repository }}/pulls/${{ github.event.pull_request.number }}/files \
+            | jq -r '.[] | select(.filename | test("^sal/deployment/.*\\.sql$")) | .filename')
 
-      # 3️⃣ Extract unique SCT numbers
-      - name: Extract SCT numbers
-        id: sct_numbers
+          echo "Changed SQL files:"
+          echo "$files"
+
+          echo "sql_files<<EOF" >> $GITHUB_OUTPUT
+          echo "$files" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      # 4️⃣ Extract SCT folders
+      - name: Extract SCTs
+        id: scts
         run: |
-          files="${{ steps.get_sql_files.outputs.sql_files }}"
-          scts=$(echo "$files" | awk -F'/' '{print $3}' | sort | uniq)
-          echo "SCTs: $scts"
-          echo "::set-output name=scts::$scts"
+          scts=$(echo "${{ steps.sql_files.outputs.sql_files }}" | awk -F'/' '{print $3}' | sort | uniq)
 
-      # 4️⃣ Trigger Lambda for all changed SCTs
-      - name: Trigger Lambda for changed SQLs
+          echo "Detected SCTs:"
+          echo "$scts"
+
+          echo "scts<<EOF" >> $GITHUB_OUTPUT
+          echo "$scts" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      # 5️⃣ Invoke Lambda
+      - name: Invoke Lambda
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_REGION: eu-north-1
         run: |
-          files="${{ steps.get_sql_files.outputs.sql_files }}"
-          scts="${{ steps.sct_numbers.outputs.scts }}"
+          files="${{ steps.sql_files.outputs.sql_files }}"
+          scts="${{ steps.scts.outputs.scts }}"
 
           for sct in $scts; do
-            changed_files=$(echo "$files" | grep "$sct")
-            payload=$(jq -n --arg did "$sct" --argjson cf "[$(echo "$changed_files" | jq -R . | jq -s .)]" \
-              '{deployment_id: $did, pr_number: '${{ github.event.pull_request.number }}', changed_sql_files: $cf}')
-            
-            echo "Invoking Lambda for SCT: $sct with payload: $payload"
+            sct_files=$(echo "$files" | grep "$sct")
+
+            payload=$(jq -n \
+              --arg did "$sct" \
+              --arg pr "${{ github.event.pull_request.number }}" \
+              --argjson cf "$(echo "$sct_files" | jq -R . | jq -s .)" \
+              '{
+                deployment_id: $did,
+                pr_number: $pr,
+                changed_sql_files: $cf
+              }')
+
+            echo "Invoking Lambda for $sct"
+            echo "$payload"
+
             aws lambda invoke \
-              --region $AWS_REGION \
               --function-name sal-sql-deployment-lambda \
+              --region eu-north-1 \
               --payload "$payload" \
               response_$sct.json
+
+            cat response_$sct.json
           done
