--- a/.github/workflows/sal-deployment.yml
+++ b/.github/workflows/sal-deployment.yml
@@ -10,46 +10,72 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repo
+      # 1️⃣ Checkout repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2️⃣ Get changed SQL files in this PR
+      # 2️⃣ Install jq (required for JSON payload)
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
+
+      # 3️⃣ Get changed SQL files in this PR (PR-safe diff)
       - name: Get changed SQL files
         id: get_sql_files
         run: |
-          files=$(git diff --name-only ${{ github.event.before }} ${{ github.sha }} | grep 'sal/deployment/.*\.sql' || true)
-          echo "Changed SQL files: $files"
-          echo "::set-output name=sql_files::$files"
+          echo "Base SHA: ${{ github.event.pull_request.base.sha }}"
+          echo "Head SHA: ${{ github.event.pull_request.head.sha }}"
 
-      # 3️⃣ Extract unique SCT numbers
-      - name: Extract SCT numbers
-        id: sct_numbers
-        run: |
-          files="${{ steps.get_sql_files.outputs.sql_files }}"
-          scts=$(echo "$files" | awk -F'/' '{print $3}' | sort | uniq)
-          echo "SCTs: $scts"
-          echo "::set-output name=scts::$scts"
+          files=$(git diff --name-only \
+            ${{ github.event.pull_request.base.sha }} \
+            ${{ github.event.pull_request.head.sha }} \
+            | grep '^sal/deployment/.*\.sql$' || true)
 
-      # 4️⃣ Trigger Lambda for all changed SCTs
-      - name: Trigger Lambda for changed SQLs
+          echo "Changed SQL files:"
+          echo "$files"
+
+          echo "sql_files<<EOF" >> $GITHUB_OUTPUT
+          echo "$files" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      # 4️⃣ Invoke Lambda for each SCT
+      - name: Invoke SQL Deployment Lambda
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_REGION: eu-north-1
         run: |
           files="${{ steps.get_sql_files.outputs.sql_files }}"
-          scts="${{ steps.sct_numbers.outputs.scts }}"
+
+          if [ -z "$files" ]; then
+            echo "❌ No SQL files detected. Exiting."
+            exit 0
+          fi
+
+          echo "✅ SQL files detected:"
+          echo "$files"
+
+          scts=$(echo "$files" | awk -F'/' '{print $3}' | sort | uniq)
 
           for sct in $scts; do
-            changed_files=$(echo "$files" | grep "$sct")
-            payload=$(jq -n --arg did "$sct" --argjson cf "[$(echo "$changed_files" | jq -R . | jq -s .)]" \
-              '{deployment_id: $did, pr_number: '${{ github.event.pull_request.number }}', changed_sql_files: $cf}')
-            
-            echo "Invoking Lambda for SCT: $sct with payload: $payload"
+            echo "🔹 Processing SCT: $sct"
+
+            changed_files=$(echo "$files" | grep "$sct" | jq -R . | jq -s .)
+
+            payload=$(jq -n \
+              --arg did "$sct" \
+              --arg pr "${{ github.event.pull_request.number }}" \
+              --argjson cf "$changed_files" \
+              '{deployment_id:$did, pr_number:$pr, changed_sql_files:$cf}')
+
+            echo "🚀 Invoking Lambda with payload:"
+            echo "$payload"
+
             aws lambda invoke \
-              --region $AWS_REGION \
               --function-name sal-sql-deployment-lambda \
+              --region eu-north-1 \
               --payload "$payload" \
               response_$sct.json
+
+            echo "📥 Lambda response:"
+            cat response_$sct.json
           done
