--- a/.github/workflows/sal-deployment.yml
+++ b/.github/workflows/sal-deployment.yml
@@ -13,12 +13,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0   # 🔥 REQUIRED for PR diff
+          fetch-depth: 0   # REQUIRED for PR diff
 
-      - name: Install dependencies
+      - name: Install system dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y jq awscli
+          sudo apt-get install -y jq unzip curl
+
+      - name: Install AWS CLI v2
+        run: |
+          curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+          unzip awscliv2.zip
+          sudo ./aws/install
+          aws --version
 
       - name: Get changed SQL files (PR-safe)
         id: get_sql_files
